--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     text-align: center;
-    
+
 }
 
 #name {
@@ -94,4 +94,17 @@ p {
 
 .links:hover {
     background-color: aqua;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+
+.article:hover {
+    color: aqua;
+
 }
