--- a/style.css
+++ b/style.css
@@ -1,52 +1,29 @@
 body {
-    margin: 0;
-    padding-top: 800px;
-
-}
-
-.image1 {
-    width: 175px;
-    margin-bottom: 50px;
-    border-radius: 50%;
-}
-
-#welcome {
-    position: absolute;
-    height: 800px;
-    color: white;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0.83;
-    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
-    display: table;
-    width: 100%;
-    height: 100%;
-    z-index: 9;
+    text-align: center;
 }
 
 h1 {
+    font-family: sans-serif;
     font-size: 40px;
-    line-height: 1.2;
-    font-family: 'Lato', sans-serif;
     font-weight: 300;
-    text-align: center;
-
 }
 
-#name {
-    font-size: 30px;
-    line-height: 1.2;
-    font-family: cursive;
-
+#apps {
+    width: 100%;
+    height: 800px;
+    background-color: aliceblue;
 }
 
-h2 {
-    font-size: 30px;
-    line-height: 1.2;
-    font-family: monospace;
-    font-weight: 300;
+#Games {
+    width: 100%;
+    height: 800px;
+    background-color: lightcoral;
+}
+
+#chatbot {
+    width: 100%;
+    height: 800px;
+    background-color: lightgray;
 }
 
 .line {
@@ -56,55 +33,12 @@ h2 {
     margin: 8px auto;
 }
 
-p {
-    max-width: 450px;
-    margin: 25px auto;
-    font-size: 17px;
-    line-height: 1.3;
+img {
+    transition: transform .2s;
+    width: 400px;
+    
 }
 
-.parallax-inner {
-    display: table-cell;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.menu {
-    list-style: none;
-    font-family: sans-serif;
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    z-index: 10;
-    cursor: pointer;
-
-}
-
-.links {
-    float: left;
-    color: white;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    font-family: fantasy;
-    font-size: 20px;
-}
-
-.links:hover {
-    background-color: aqua;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-a {
-    text-decoration: none;
-}
-
-.article:hover {
-    color: aqua;
-
+img:hover {
+    transform: scale(0.9);
 }
